--- a/IntroductionToPython/09-Lists.ipynb
+++ b/IntroductionToPython/09-Lists.ipynb
@@ -211,7 +211,7 @@
    "id": "ca817395",
    "metadata": {},
    "source": [
-    "Use `insert(index)` to put an item at a specific index in the list.\n",
+    "Use <code>insert(<i>index</i>, <i>value</i>)</code> to put an item at a specific index in the list.\n",
     "\n",
     "For practice, insert \"Miami\" at the start of the `acc_schools` list."
    ]
