--- a/IntroductionToPython/14-Sets.ipynb
+++ b/IntroductionToPython/14-Sets.ipynb
@@ -10,14 +10,14 @@
     "# Sets\n",
     "A set is an unordered collection of objects with no duplicates.\n",
     "\n",
-    "Sets support most of the operations that lists and tuples contain, but set objects also support mathematical operations such as union, intersection, and difference.\n",
+    "Sets support many of the same operations that lists and tuples have, but set objects also support mathematical operations such as union, intersection, and difference.  Since sets are unordered, index operations to retrieve and insert elements at specific points in the collection do not make sense and have no implementation.\n",
     "\n",
     "Another way to think about sets is to equate them to a dictionary with its keys, but no values corresponding to those keys.\n",
     "\n",
-    "[Set theory](https://en.wikipedia.org/wiki/Set_theory) plays a pivotal role in many computer science application  - most signficantly relational databases, but we'll use sets for a variety of purposes.  If we are search a network, have we visited a particulart node already?  What are the unique items present?\n",
+    "[Set theory](https://en.wikipedia.org/wiki/Set_theory) plays a pivotal role in many computer science applications  - most significantly relational databases, but we'll use sets for a variety of purposes. For example, we can create a unique collection (no repeated elements) from a list by converting it to a set.\n",
     "\n",
-    "To create a set you can use the `set()` function or enclose a comma-separate list of values within curly brackets. (Remember that a comma-separated list is an implicit tuple. The `set()` function iterates over that tuple and adds members to the set, removing any duplicates.\n",
-    "To create an empty set, you must use the `set()` function as `{}` creates an empty dictionary.  (There's only so many symbols that have a start and end value.)"
+    "To create a set, use the `set()` function or enclose a comma-separate list of values within curly brackets. The `set()` function iterates the the value of its argument and adds members to the set, removing any duplicates.\n",
+    "To create an empty set, you must use the `set()` function as `{}` creates an empty dictionary."
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "invalid_set = {['test', 'word']}"
+    "invalid_set = {['test', 'word']}    # raises a TypeError, sets cannot contain mutable members"
    ]
   },
   {
@@ -308,7 +308,7 @@
    "metadata": {},
    "source": [
     "### Difference\n",
-    "Returns a new set with the elements in the set that are not in the other set.  Use `difference()` or `-`\n",
+    "Returns a new set with the elements in the first set that are not in the other set. (Difference removes any elements in the second set from the first set.)  Use `difference()` or `-`\n",
     "\n",
     "Yes, you can chain these together was well.  The operation works left to right."
    ]
@@ -321,7 +321,9 @@
    "outputs": [],
    "source": [
     "print(us_flag_colors - germany_flag_colors)\n",
-    "print(mexico_flag_colors.difference(switzerland_flag_colors))"
+    "print(mexico_flag_colors.difference(switzerland_flag_colors))\n",
+    "\n",
+    "print (us_flag_colors - germany_flag_colors - switzerland_flag_colors)"
    ]
   },
   {
@@ -411,7 +413,7 @@
    "id": "ddf78d00",
    "metadata": {},
    "source": [
-    "Throughout your programming career, you'll find De Morgan's law also coming up in regards to boolean logic/algebra - one of your `if` statements will have a condition like `not(A or B)`."
+    "Throughout your programming career, you'll find De Morgan's law also coming up in regards to Boolean logic/algebra - one of your `if` statements will have a condition like `not(A or B)`."
    ]
   },
   {
@@ -456,7 +458,7 @@
    "metadata": {},
    "source": [
     "## Immutable Sets\n",
-    "To create an immutable set, call `frozenset()` on any iterable (list, set, tuple, string, ...) object."
+    "To create an immutable set, call `frozenset()` on any iterable (list, set, tuple, string) object."
    ]
   },
   {
@@ -477,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frozen.add(\"Hans\")"
+    "frozen.add(\"Hans\")    ## Raises an AttributeError as the \"add\" behavior/operation does not exist for frozenset"
    ]
   },
   {
@@ -486,10 +488,10 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "1. Sets are collections of any objects (true/false)\n",
-    "false - limited to immutable objects\n",
-    "2. Present two ways of creating a set.\n",
-    "3. A proper subset can contain an element not in the other set.  (true/false)"
+    "TODO\n",
+    "Thought  create two lists of strings  (common household stuff - book, cup , glass, knife, fork, ...)\n",
+    "- create sets\n",
+    "- peform various operations\n"
    ]
   },
   {
@@ -498,12 +500,7 @@
    "id": "d51dd64e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 3\n",
-    "us_flag_colors = set([\"red\",\"white\",\"blue\"])\n",
-    "mexico_flag_colors = set([\"green\", \"white\",\"red\"])\n",
-    "mexico_flag_colors < us_flag_colors"
-   ]
+   "source": []
   }
  ],
  "metadata": {
