--- a/IntroductionToPython/16-JSON.ipynb
+++ b/IntroductionToPython/16-JSON.ipynb
@@ -8,11 +8,11 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# JSON\n",
-    "JavaScript Object Notation (JSON) has become one of the most widely used data interchange formats on the Internet data.  JSON is also the record format used by some popular database management systems (DBMS) such as [Elasticsearch](https://www.elastic.co/) and [MongoDB](https://www.mongodb.com).  Relational DBMSs such as PostgreSQL and Oracle DB also now offer JSON data type with support to query and index embedded fields.\n",
+    "JavaScript Object Notation (JSON) has become one of the most widely used data interchange formats on the Internet data.  JSON is also the record format used by some popular database management systems (DBMS) such as [Elasticsearch](https://www.elastic.co/) and [MongoDB](https://www.mongodb.com).  Relational DBMSs such as PostgreSQL and Oracle DB also now offer a JSON data type with support to query and index embedded fields.\n",
     "\n",
     "Informally, the home page for JSON on the internet is at [https://json.org](https://json.org).  The format has also been formalized as a [standard](https://datatracker.ietf.org/doc/html/rfc8259).\n",
     "\n",
-    "JSON is text format, derived from object literals of JavaScript.  Fortunately for us, these literals are nearly identical to those used by Python.\n",
+    "JSON is a text format, derived from object literals of JavaScript.  Fortunately for us, these literals are nearly identical to those used by Python.\n",
     "\n",
     "\n",
     "JSON contains four \"basic\" types (strings, numbers, Booleans, and null) and two structured types (objects \\[dictionaries\\] and arrays \\[lists\\]).  \n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c32ba8b9",
    "metadata": {},
    "outputs": [],
@@ -75,10 +75,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c718a7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Bruce Wayne', 'address': {'street': '101 Wayne Manor Drive', 'city': 'Gotham', 'state': 'NJ', 'zipCode': '12345-6789'}, 'occupation': 'CEO', 'alias': 'Batman', 'phone': ['212-234-5544', '212-456-8734']}\n",
+      "Name: Bruce Wayne\n",
+      "First phone number: 212-234-5544\n"
+     ]
+    }
+   ],
    "source": [
     "print(data)\n",
     "print(\"Name:\",data[\"name\"])\n",
@@ -96,12 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "96829483",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"name\": \"Bruce Wayne\", \"address\": {\"street\": \"101 Wayne Manor Drive\", \"city\": \"Gotham\", \"state\": \"NJ\", \"zipCode\": \"12345-6789\"}, \"occupation\": \"CEO\", \"alias\": \"Batman\", \"phone\": [\"212-234-5544\", \"212-456-8734\"]}\n"
+     ]
+    }
+   ],
    "source": [
-    "output = json.dumps(data)"
+    "output = json.dumps(data)\n",
+    "print(output)"
    ]
   },
   {
@@ -114,10 +133,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c80498de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"address\": {\n",
+      "        \"city\": \"Gotham\",\n",
+      "        \"state\": \"NJ\",\n",
+      "        \"street\": \"101 Wayne Manor Drive\",\n",
+      "        \"zipCode\": \"12345-6789\"\n",
+      "    },\n",
+      "    \"alias\": \"Batman\",\n",
+      "    \"name\": \"Bruce Wayne\",\n",
+      "    \"occupation\": \"CEO\",\n",
+      "    \"phone\": [\n",
+      "        \"212-234-5544\",\n",
+      "        \"212-456-8734\"\n",
+      "    ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "print(json.dumps(data, sort_keys=True, indent=4))"
    ]
@@ -128,7 +169,7 @@
    "metadata": {},
    "source": [
     "## JSON and Files\n",
-    "To read and write from files, the json module has the functions `load()` and `dump()`.  Refer to the [documentation]((https://docs.python.org/3/library/json.html) or use the online help for more information"
+    "To read and write from files, the json module has the functions `load()` and `dump()`.  Refer to the [documentation](https://docs.python.org/3/library/json.html) or use the online help for more information"
    ]
   },
   {
@@ -155,7 +196,7 @@
    "metadata": {},
    "source": [
     "## Case Study: Stock Quotes, REST, and JSON\n",
-    "Yahoo Finance has long published a series of APIs that allow developers and other systems to access stock market data. At one point, Yahoo sold subscription access to these APIs.  However, they have since shutdown their service, but their APIs are still directly accessible.  While a service still appears to be available from Yahoo, yahoofinanceapi.com, the services is provided by a Russian company.  The DNS regristration records demonstrate this. You can run `whois yahoofinanceapi.com` from a command-line to see the details.  \n",
+    "Yahoo Finance has long published a series of APIs that allow developers and other systems to access stock market data. At one point, Yahoo sold subscription access to these APIs.  However, they have since shutdown their service, but their APIs are still directly accessible.  While a service still appears to be available from Yahoo, yahoofinanceapi.com, a Russian company actually provides that service. The DNS regristration records demonstrate this. You can run `whois yahoofinanceapi.com` from a command-line to see the details.  \n",
     "\n",
     "While the following is not legal advice, currently in the United States it is permissible to access publicly available website to scrape data provided no authorization is required. https://en.wikipedia.org/wiki/HiQ_Labs_v._LinkedIn\n",
     "\n",
@@ -205,7 +246,9 @@
     "- https://www.alphavantage.co/\n",
     "- https://polygon.io/\n",
     "- https://finnhub.io/pricing\n",
-    "- and more ..."
+    "- and more ...\n",
+    "\n",
+    "Developers will regularly encounter this type of a task - researching how best to access specific data. Many trade-offs and risks exist."
    ]
   },
   {
@@ -214,7 +257,7 @@
    "metadata": {},
    "source": [
     "## Exercise\n",
-    "1. Flatten the contents of the follow list into a file.  The first row of the file should be the column headers separated by tabs.  Each row is a record. Fields should be separated by tabs. You can assume each record has the same format.  The order of columns does not matter\n",
+    "1. Flatten the contents of the follow list into a file.  The first row of the file should be the column headers separated by tabs.  Each row is a record. Fields should be separated by tabs. You can assume each record has the same format.  The order of columns does not matter. For nested fields, you prefix the column name with the parent field name (zipCode shuold be address.zipCode) in the column header.\n",
     "<pre>\n",
     "entries='''\n",
     "[\n",
@@ -253,7 +296,7 @@
     "</pre>\n",
     "Hints:\n",
     "You need to recursively traverse the JSON structure (the dictionary with Python) to figure out the columns.\n",
-    "Then using those columns, recursive access data elements."
+    "Then using those columns, recursive access data elements.  You can test for types is <code>type(<i>var_name</i>) is <i>type_name</i>."
    ]
   },
   {
