--- a/IntroductionToPython/15.5-Recursion.ipynb
+++ b/IntroductionToPython/15.5-Recursion.ipynb
@@ -8,11 +8,11 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# Recursion\n",
-    "Recursion is a special type of problem in which the solution is often defined in terms of the solution itself. Generally speaking, it continually solves smaller and smaller instances of itself, until it reaches a base case.\n",
+    "Recursion is a special type of problem in which the solution is often defined in terms of the solution itself. A recursive solution continually solves smaller and smaller instances of itself, until it reaches a base case.\n",
     "\n",
-    "From a practical point of view with programming,  a recursive function is any function that calls itself.\n",
+    "From a practical point of view with programming,  a recursive function is any function that calls itself.  Indirect recursion also exists when one or more functions may be called prior to the call back to itself.  Recursive solutions will have cycles (loops) within the call graph.\n",
     "\n",
-    "That last phrase brings back the concept of repetition.  Revisiting Python's loop statements (`while` and `for`), both had methods to be able to stop the loop somehow.  `while` had a condition check before we began the each iteration of the loop.  `for` has an implicit end to iteration once the sequence completes. Similarly, for recursive functions, we need to define a base case that allows the repetition to stop.  This will either be the simplest case of the problem itself: \n",
+    "That last paragraph brings back the concept of repetition.  Revisiting Python's loop statements (`while` and `for`), both had methods to be able to stop the loop somehow.  `while` had a condition check before we began the each iteration of the loop.  `for` has an implicit end to iteration once the sequence completes. Similarly, for recursive functions, we need to define a base case that allows the repetition to stop.  This will be the simplest case of the problem itself: \n",
     "* for cases where we have a number that number will be 0 or 1.\n",
     "* for data structures(lists, dictionaries, sets, etc.), when that structure is empty or has no members of a particular type"
    ]
@@ -50,7 +50,7 @@
     "```\n",
     "RecursionError: maximum recursion depth exceeded while calling a Python object\n",
     "```\n",
-    "As a program makes function calls, Python must add a \"stack frame\" to keep track of the current function as well as all of its predecessors. Prior to creating another \"stack frame\", the interpreter checks how many instances have been created - how many function calls have been made without corresponding return or exit from the function.  If that number is beyond a certain threshold, then the Python interpreter assumes that a logic error occurs, stops execution, and reports the recursion error.  This \"depth' is configurable.  Java maintains a separate memory space and will have a memory error when the stack space is exhausted.  The C and C++ standards do not specify a limit and this will be based upon the environment (operating system, other libraries, etc.) in which the program runs.\n",
+    "As a program makes function calls, Python must add a \"stack frame\" to keep track of the current function as well as all of its predecessors. This stack frame allows the interpreter to keep track of local namespaces for each function call.  Prior to creating another \"stack frame\", the interpreter checks how many instances have been created - how many function calls have been made without corresponding return or exit from the function.  If that number is beyond a certain threshold, then the Python interpreter assumes that a logic error occurs, stops execution, and reports the recursion error.  This \"depth' is configurable.  Java maintains a separate memory space and will have a memory error when the stack space is exhausted.  The C and C++ standards do not specify a limit and this will be based upon the environment (operating system, other libraries, etc.) in which the program runs.\n",
     "\n",
     "As mentioned, we need to define the base case. For printing a message, we can keep track of how many times the message has been printed and then stop when we reach that number.  The examples here will show both keeping track of a decreasing count as well as an increasing count.  By convention(and \"solving a smaller instances of itself\"), programmers write recursive functions with decreasing values. Of course, we could just use a `for` loop with a `range()` to do this."
    ]
@@ -92,7 +92,9 @@
    "id": "8a73a09e",
    "metadata": {},
    "source": [
-    "Notice that the later function is also less complex in that we did not need to track of the number of messages to print.  This occurred through our initial call."
+    "Notice that the later function is also less complex in that we did not need to track of the maximum number of messages to print.  Our initial call implicitly defines this value.\n",
+    "\n",
+    "[View say hello decreasing on pythontutor.com](https://pythontutor.com/render.html#code=def%20say_hello_decreasing%28count%29%3A%0A%20%20%20%20if%20%28count%20%3D%3D%200%29%3A%0A%20%20%20%20%20%20%20%20return%0A%20%20%20%20print%28%22hello%22%29%0A%20%20%20%20say_hello_decreasing%28count%20-%201%29%0A%20%20%20%20%0Asay_hello_decreasing%285%29&cumulative=false&curInstr=0&heapPrimitives=false&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false)"
    ]
   },
   {
@@ -103,9 +105,9 @@
     "## Defensive Programming\n",
     "Defensive programming is the practice of writing code such that it will continue to function correctly even though the code is being used in a manner that was not originally intended or imagined.  It's also being able to reduce the number of potential problems by using slightly different logic that still meets the original intent.\n",
     "\n",
-    "As mentioned, Python is a dynamically, strongly typed language. By dynamic, the types are determined at runtime. By static, the interpreter enforces the types that variables and expressions have.  (In contrast, C, C++, and Java are static typed.  C is considered weakly typed as type checking is not strongly enforced - there's an assumption programmers now what they are doing. C++ has much stronger type checking during the compilation process and is considered strongly typed.  Java has both static checks during compilation as well as runtime checks. [Ada](https://en.wikipedia.org/wiki/Ada_(programming_language) is most likely the strongest-typed language.)\n",
+    "As mentioned, Python is a dynamically, strongly typed language. By dynamic, the types are determined at runtime. By strongly typed, the interpreter enforces the types that variables and expressions have.  (In contrast, C, C++, and Java are statically typed.  C is considered weakly typed as type checking is not strongly enforced - there's an assumption programmers now what they are doing. C++ has much stronger type checking during the compilation process and is considered strongly typed.  Java has both static checks during compilation as well as runtime checks. [Ada](https://en.wikipedia.org/wiki/Ada_(programming_language) is most likely the strongest-typed language.\n",
     "\n",
-    "As being dynamic, it's possible to use different types than what the programmer originally intended as long as the operations or methods called on that type are supported by the type itself.  \n",
+    "As one of the effects of being dynamic typed, it is possible to use different types than what the programmer originally intended as long as the operations or methods called on that type are supported by the type itself.  \n",
     "\n",
     "What happens if we made this function call - `say_hello_decreasing(5.5)`?  How many messages will appear?  Let's try..."
    ]
@@ -187,9 +189,9 @@
    "metadata": {},
    "source": [
     "## Example: Summing a List\n",
-    "While recursion is not an optimal way to sum a list (a `for` loop is most appropriate), we can use recursion.\n",
+    "While recursion is not an optimal way to sum a list (a `for` loop is more appropriate, but using the built-in function `sum` is the best approach), programmers can use recursion for this task.\n",
     "\n",
-    "So to approach think, let's revisit the seven steps and work through some sample cases by hand first.\n",
+    "So to approach a recursive solution, let's revisit the seven steps and work through some sample cases by hand first.\n",
     "\n",
     "The sum of an empty list is 0.  Sum of a list with just one element is that element itself.  We can't have a negative length for a list.\n",
     "\n",
@@ -245,6 +247,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d32256b4",
+   "metadata": {},
+   "source": [
+    "[View on PythonTutor](https://pythontutor.com/render.html#code=def%20sum_list%28list_to_sum%29%3A%0A%20%20%20%20if%20len%28list_to_sum%29%20%3D%3D%200%3A%0A%20%20%20%20%20%20%20%20return%200%0A%20%20%20%20%0A%20%20%20%20current_value%20%3D%20list_to_sum%5B0%5D%0A%20%20%20%20recursive_value%20%3D%20sum_list%28list_to_sum%5B1%3A%5D%29%0A%20%20%20%20result%20%3D%20current_value%20%2B%20recursive_value%0A%20%20%20%20return%20result%0A%0Aprint%28%22%5B1,2,3%5D%3A%22,%20sum_list%28%5B1,2,3%5D%29%29&cumulative=false&curInstr=0&heapPrimitives=nevernest&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false)  Note: Intermediary variables added to this example to demonstrate the program's state."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5335c165",
    "metadata": {},
    "source": [
@@ -258,11 +268,11 @@
    "source": [
     "In a previous notebook, we learned the basic operations to perform directory and file operations.\n",
     "\n",
-    "A common task could be to list all of the files within a particularly directory, including any subdirectories, as well as any subdirectories those may have, then subdirectories within those subdirectories, and then ...  \n",
+    "One common task with filesystems is to list all of the files within a particularly directory, including any subdirectories, as well as any subdirectories those may have, then subdirectories within those subdirectories, and then ...  \n",
     "\n",
     "As your starting to see, it's getting a bit complex - a priori, we don't know the depth of the directory structure .  Nor do we want to special case this - remember we are after generalized solutions.\n",
     "\n",
-    "Solving this for just the initial directory is simply listing the contents of that directory.  However, as we iterate through that list, we need to ask ourselves what do we to do for each file?\n",
+    "Solving this for just the initial directory is simply just listing the contents of that directory.  However, as we iterate through that list, we need to ask ourselves what do we to do for each file?\n",
     "- file: just print the name\n",
     "- directory: print the name, and then print the contents of that directory.\n",
     "\n",
@@ -298,16 +308,16 @@
     "\n",
     "Recursive functions can be categorized into _head recursion_ and _tail recursion_.  \n",
     "\n",
-    "For _head recursion_, the recursive call comes first, then an other processing in the function. `say_hello_increasing()` is an example of head recursion.  Note that we had the base condition check first, though.  If we had put the recursive call first, then a stack overflow error would have occurred as the condition for calling the function never changed.\n",
+    "For _head recursion_, the recursive call comes first, then any other processing in the function. `say_hello_increasing()` is an example of head recursion.  Note that we had the base condition check first, though.  If we had put the recursive call first, then a stack overflow error would have occurred as the condition for calling the function never changed.\n",
     "\n",
     "In _tail recursion_, the function's processing comes first followed by the recursive call.  `walk_directory()` is an example of tail recursion.\n",
     "\n",
-    "Often, we may want to initiate a recursive call, but may want to perform one or more of the follow items as part of that process:\n",
+    "Often, we may want to initiate a recursive call, but first perform one or more of the follow items as part of that process:\n",
     "- validate parameters\n",
     "- initialize any parameters or auxiliary variables. Often, we may want to keep track of the stack depth ourselves\n",
     "- handle any exceptions and errors. (we'll be covering these soon)\n",
     "\n",
-    "For these situations, we will create _wrapper functions_ that can perform these tasks.\n",
+    "For these situations, use _wrapper functions_ that can perform these tasks.\n",
     "\n",
     "For Python, we can nest functions within other functions.  By doing this, we prevent code outside of our function calling the nested functions.  In other languages like Java and C++, we can make the actual recursive function private to prevent direct calls.\n"
    ]
@@ -347,6 +357,7 @@
    "metadata": {},
    "source": [
     "[![Relevant XKCD Cartoon](images/relevantXKCD.png)](https://thomaspark.co/2017/01/relevant-xkcd/)\n",
+    "<br>\n",
     "<small>Credit: https://thomaspark.co/2017/01/relevant-xkcd/</small>"
    ]
   },
@@ -356,9 +367,9 @@
    "metadata": {},
    "source": [
     "## Exercises:\n",
-    "1. Write a function with the signature factorial(n) to compute the [factorial](https://en.wikipedia.org/wiki/Factorial) of that number using recursion. This problem is the probably the most used example to introduce recursion. We are leaving this as an exercise to the reader (literally and figuratively)\n",
+    "1. Write a function with the signature factorial(n) to compute the [factorial](https://en.wikipedia.org/wiki/Factorial) of that number using recursion. This problem is the probably the most used example to introduce recursion. We are leaving this as an exercise to the reader (literally and figuratively).\n",
     "2. Write a recursive function to compute the nth [Fibonacci number](https://en.wikipedia.org/wiki/Fibonacci_number).  This function should have the signature `fibonacci(n)`  This is the other standard example often used for recursion.  Again, it's an exercise for the reader.\n",
-    "3. Sum a list. However, an element may be a number, list or a string.  Strings should be ignored.\n",
+    "3. Sum a list. However, an element may be a number, list or a string.  Strings should be ignored.  To test if a variable is a string, use `type(variable_name) is str`, to test if a variable is a list, use `type(variable_name) is list`\n",
     "4. Implement a modified version of the Linux command-line program tree as a recursive function.  Below is the output.  In this example, we called it with the current directory.  Files and directories should be listed in alphabetical order.  The number in parenthesis is the size of the file in bytes.  At the bottom of the output, is the number of directories and files underneath the directory that started the recursion. i.e., the initial directory is not included.  The final number is the total number of bytes allocated to the entire structure, including the initial directory.  The starting point to your code should be `tree(directory_name)`.  You can assume there will always be multiples files and directories. i.e., you do not have to special case the plurals for this problem.  You should show all files (including hidden files - those that start with a period.  Implementation note: to be able to reference a variable defined by outer function within a nested function use the `nonlocal` keyword.  This functions similarly to the `global` keyword used when discussing namespaces.\n",
     "\n",
     "<pre>\n",
