--- a/IntroductionToPython/20-Modules.ipynb
+++ b/IntroductionToPython/20-Modules.ipynb
@@ -8,9 +8,9 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# Modules\n",
-    "With the exception of existing classes and functions that we have used, everything that we have written so far has been put within a single file.  Now, we will look at how to package our code into multiple files.\n",
+    "With the exception of existing classes and functions that we have used, everything that we have written so far has been contained within a single file.  Now, we will look at how to organize our code into multiple files.\n",
     "\n",
-    "Just as functions provided an abstractions for a series of steps that performed a task, a module creates an abstraction of a group of related variables(data), functions, and classes. Modules are key abstraction for reusing code and functionality.\n"
+    "Just as functions provide an abstractions for a series of steps that performed a task, a module creates an abstraction of a group of related variables(data), functions, and classes. Modules are key abstraction for reusing code and functionality.\n"
    ]
   },
   {
@@ -61,12 +61,11 @@
    "metadata": {},
    "source": [
     "Why rename imported modules?\n",
-    "- duplicate names\n",
+    "- avoid duplicate names\n",
     "- more mnemonic / following convention (Example: <code>import pandas as pd</code>\n",
     "- minimize typing\n",
     "\n",
-    "You can also limit what you import from a module\n",
-    "<code>from <i>moduleName</i> import <i>name</i></code>"
+    "You can also import specific items from a module: <code>from <i>moduleName</i> import <i>name</i></code>"
    ]
   },
   {
@@ -125,7 +124,7 @@
     "## Packages \n",
     "Python allows modules to be organized by subdirectories into packages. The directory names form a hierarchy of names.\n",
     "\n",
-    "Prior to Python 3.3, it was necessary to include a file named `__init__.py` in a directory for it to make it a Python package. The file can but used for any special initialization code for the package. The use of `__init__.py` is a common interview question.  Without the `__init__.py`, the package is considered an [implicit namespace package](https://peps.python.org/pep-0420/). The technical details between regular packages and implicit namespace packages are irrelevant for most use cases, but issues generally arise when the same package name is used in more than one location in the search path (see below on \"How imports works\") - [view more details].(https://web.archive.org/web/20220605062021/http://python-notes.curiousefficiency.org/en/latest/python_concepts/import_traps.html)  Note: these links are provided for informational purposes only.\n",
+    "Prior to Python 3.3, it was necessary to include a file named `__init__.py` in a directory for it to make it a Python package. The file can but used for any special initialization code for the package. The use of `__init__.py` is a common interview question.  Without the `__init__.py`, the package is considered an [implicit namespace package](https://peps.python.org/pep-0420/). The technical details between regular packages and implicit namespace packages are irrelevant for most use cases, but issues generally arise when the same package name is used in more than one location in the search path (see below on \"How imports works\") - [view more details](https://web.archive.org/web/20220605062021/http://python-notes.curiousefficiency.org/en/latest/python_concepts/import_traps.html).  Note: these links are provided for informational purposes only.\n",
     "\n",
     "Typically, programmers use the terms \"modules\" and \"packages\" interchangeably."
    ]
@@ -154,7 +153,7 @@
     "<pre>!pip install <i>packageName</i></pre>\n",
     "However, this will install the pacakage into the environment from which Jupyter was started, not the current environment.\n",
     "\n",
-    "You should ensure <code>setuptools</code> and <code>wheel</code> are installed when using pip.  <code>wheel</code> can install pre-built packages into your environment if compatible. <code>setuptools</code> helps to handle the installation of other packages from source code. The following makes sure all are the latest version."
+    "You should ensure <code>setuptools</code> and <code>wheel</code> are installed when using pip.  <code>wheel</code> can install pre-built packages into your environment if compatible. <code>setuptools</code> helps to handle the installation of other packages from source code. The following makes sure  these three packages are installed and are the latest versions available."
    ]
   },
   {
@@ -170,13 +169,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44f6294e",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 3px solid black;padding: 10px; border-radius: 10px;\">\n",
+    "<b>Security Note</b>\n",
+    "    \n",
+    "Software supply chain has become one of the more easy to exploit avenues for compromising software security.  Often, developers will include dependencies in their code without validating those dependencies first.\n",
+    "    \n",
+    "Possible ways to mitigate this attack vector:\n",
+    "<ul>\n",
+    "    <li> Use trusted, well known components\n",
+    "    <li> Scan dependencies for known vulnerabilities\n",
+    "    <li> Practice defense is depth. While you may not be to prevent the software issue, can you minimize the damage?\n",
+    "    <li> Use a trusted source for components.    \n",
+    "</ul>\n",
+    "<a href='https://web.archive.org/web/20220606152124/https://blog.gitguardian.com/supply-chain-attack-6-steps-to-harden-your-supply-chain/'>Supply Chain Attacks</a>    \n",
+    "       \n",
+    "With regards to the trusted source, Google announced in May 2022 that they would provide a new Google Cloud Service \"Assured Open Source Software\" based upon components curated by the company.  <a href='https://cloud.google.com/blog/products/identity-security/introducing-assured-open-source-software-service'>https://cloud.google.com/blog/products/identity-security/introducing-assured-open-source-software-service</a>     \n",
+    "\n",
+    "</div>\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "838ef17f",
    "metadata": {},
    "source": [
     "### Commonly Used Modules / Packages\n",
-    "Packages that have a URL with \"python.org\" are part of the includes modules distributed with the language and do not need to be installed.  [Python Standard Library](https://docs.python.org/3/library/)\n",
+    "Packages that have a URL with \"python.org\" are part of the modules distributed with the language and do not need to be installed.  [Python Standard Library](https://docs.python.org/3/library/)\n",
     "\n",
-    "Package Name | Description | Import | URL\n",
+    "Package Name | Description | Import<br>Alias | URL\n",
     ":-----------|:----|:---|:------\n",
     "datetime | Supplies classes to represent and manipulate date and times| dt|https://docs.python.org/3/library/datetime.html\n",
     "json | Exposes APIs to load, parse, and write [JSON Objects](https://datatracker.ietf.org/doc/html/rfc7159.html). | |https://docs.python.org/3/library/json.html\n",
@@ -192,7 +216,7 @@
     "sys | Provides access to variables and functions used by the Python interpreter | |https://docs.python.org/3/library/sys.html\n",
     "unittest | Unit testing framework that supports test automation || https://docs.python.org/3/library/sys.html\n",
     "\n",
-    "The \"Import\" column contains the standard rename alias."
+    "The \"Import Alias\" column contains the conventional alias used for this package/module during an import."
    ]
   },
   {
@@ -311,7 +335,7 @@
    "metadata": {},
    "source": [
     "## How Import Works ...\n",
-    "When the Python interpreter executes the <code>import <i>moduleName</i></code> statement, it first checks to see whether or not that module has been previously imported. If it hasn't, then the interpreter will search a list of directories a file named <i>moduleName</i>.py.  This list is available in a Python variable `sys.path` and is created from the following sources:\n",
+    "When the Python interpreter executes the <code>import <i>moduleName</i></code> statement, it first checks to see whether or not that module has been previously imported. If it has not been imported, then the interpreter will search a list of directories for a file named <i>moduleName</i>.py or a directory with that name.  This search list is available in a Python variable `sys.path` and is created from the following sources:\n",
     "- the current working directory\n",
     "- the PYTHONPATH environment variable if it has been set\n",
     "- an installation-dependent list of directories (created at install time or when a virtual environment was created)"
@@ -333,7 +357,7 @@
    "id": "02f75e7c",
    "metadata": {},
    "source": [
-    "Next, Python interpreter binds the results of that search to a name in the local scope.  This allows us to reference the module name, alias, or specific import item within our code.  The following code shows that the length of the local namespace has grown by one from the import of the PI variable:"
+    "Next, Python interpreter binds the results of that search to a name in the current local scope.  This allows us to reference the module name, alias, or specific import item within our code.  The following code shows that the length of the local namespace has grown by one from the import of the PI variable:"
    ]
   },
   {
@@ -360,7 +384,7 @@
     "if __name__ == \"__main__\":\n",
     "    <i>statements</i>\n",
     "</pre>\n",
-    "checks to see whether or not the file has been started from the command line (through a command such as <code>python <i>moduleName</i>.py</code>. If it has, then the statements for that block will execute.  Otherwise, they are skipped.  This allows us to run the module as a main program, but then if the module is imported by other programs to skip running those steps. <code>if \\_\\_name\\_\\_ == \"\\_\\_main\\_\\_\":</code> is very common boilerplate code that you will see in a large number of Python files."
+    "checks to see whether or not the file has been started from the command line (through a command such as <code>python <i>moduleName</i>.py</code>. If it has, then the statements for that block will execute.  Otherwise, they are skipped.  This allows us to run the module as a main program, but then if the module is imported by other programs to skip running those steps. A large number of Python files contain this common boilerplate code: <code>if \\_\\_name\\_\\_ == \"\\_\\_main\\_\\_\":</code>. In some ways, the code is equivalent to the main method in C, C++, and Java."
    ]
   },
   {
@@ -413,8 +437,17 @@
    "id": "68683cce",
    "metadata": {},
    "source": [
-    "## Exercise\n"
+    "## Exercises\n",
+    "TODO\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d8c737c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
